chore: fully implement auth session
