# docs/swagger.yaml
@@ -10,10 +10,14 @@ definitions:
     properties:
       access_token:
         type: string
+      csrf_token:
+        type: string
       refresh_token:
         type: string
       user:
         $ref: '#/definitions/skeleton_internal_api_user_data_dto.UserDTO'
+      xsrf_token:
+        type: string
     type: object
   skeleton_internal_api_auth_data_dto.PostAuthLogoutRequestDTO:
     properties:
@@ -28,6 +32,10 @@ definitions:
   skeleton_internal_api_auth_data_dto.PostAuthTokenRefreshResponseDTO:
     properties:
       access_token:
+        type: string
+      csrf_token:
+        type: string
+      xsrf_token:
         type: string
     type: object
   skeleton_internal_api_user_data_dto.UserDTO:
@@ -181,7 +189,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: Endpoint to refresh access token
+      description: Endpoint to refresh Access, CSRF, and XSRF tokens
       parameters:
       - description: Request Body
         in: body
@@ -208,7 +216,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/skeleton_pkg_data_dto.ErrorHTTPResponse'
-      summary: Refresh Access Token Endpoint
+      summary: Refresh Authentication Tokens Endpoint
       tags:
       - API / Auth
   /public/api/health:
