# internal/api/auth/usecase/process_user_login.go
@@ -7,6 +7,7 @@ import (
 	authdomain "skeleton/internal/api/auth/domain"
 	apperror "skeleton/pkg/error"
 
+	"github.com/google/uuid"
 	"go.uber.org/zap"
 )
 
@@ -14,30 +15,31 @@ func (u *AuthUsecase) ProcessUserLogin(
 	ctx context.Context,
 	email string,
 	passwd string,
-) (*ent.User, string, string, error) {
+	userAgent string,
+) (*ent.User, string, string, string, string, error) {
 	user, err := u.userRepo.FindByEmail(ctx, u.db, email)
 	if err != nil {
-		return nil, "", "", err
+		return nil, "", "", "", "", err
 	}
 
 	if user == nil {
 		u.logger.Debug("user not found", zap.String("email", email))
-		return nil, "", "", apperror.NewAppError(
+		return nil, "", "", "", "", apperror.NewAppError(
 			http.StatusUnauthorized,
 			authdomain.ErrInvalidCredentials,
 		)
 	}
 
-	u.logger.Debug("user found", zap.Int("userID", user.ID))
 	if ok := u.sec.CheckPasswordHash(passwd, user.Password); !ok {
 		u.logger.Debug("invalid password")
-		return nil, "", "", apperror.NewAppError(
+		return nil, "", "", "", "", apperror.NewAppError(
 			http.StatusUnauthorized,
 			authdomain.ErrInvalidCredentials,
 		)
 	}
 
-	refreshToken, err := u.sec.NewRefreshJWT(user.ID)
+	refreshTokenID, refreshToken, refreshTokenExpiresAt, err :=
+		u.sec.NewRefreshJWT(user.ID)
 	if err != nil {
 		u.logger.Error(
 			"failed to generate refresh token",
@@ -45,13 +47,13 @@ func (u *AuthUsecase) ProcessUserLogin(
 			zap.Error(err),
 		)
 
-		return nil, "", "", apperror.NewAppError(
+		return nil, "", "", "", "", apperror.NewAppError(
 			http.StatusInternalServerError,
 			authdomain.ErrGenerateTokenFailed,
 		)
 	}
 
-	accessToken, err := u.sec.NewAccessJWT(user.Email, "user", nil)
+	accessToken, err := u.sec.NewAccessJWT(user.ID, user.Email, "user", nil)
 	if err != nil {
 		u.logger.Error(
 			"failed to generate access token",
@@ -59,16 +61,50 @@ func (u *AuthUsecase) ProcessUserLogin(
 			zap.Error(err),
 		)
 
-		return nil, "", "", apperror.NewAppError(
+		return nil, "", "", "", "", apperror.NewAppError(
 			http.StatusInternalServerError,
 			authdomain.ErrGenerateTokenFailed,
 		)
 	}
 
-	_, err = u.authRepo.Create(ctx, u.db, user.ID, refreshToken)
+	xsrfToken, err := uuid.NewV7()
 	if err != nil {
-		return nil, "", "", err
+		u.logger.Error(
+			"failed to generate csrf token",
+			zap.Int("userID", user.ID),
+			zap.Error(err),
+		)
+
+		return nil, "", "", "", "", apperror.NewAppError(
+			http.StatusInternalServerError,
+			authdomain.ErrGenerateTokenFailed,
+		)
 	}
 
-	return user, refreshToken, accessToken, nil
+	csrfToken, err := u.sec.NewCSRF(user.ID, xsrfToken.String())
+	if err != nil {
+		u.logger.Error(
+			"failed to generate csrf token",
+			zap.Int("userID", user.ID),
+			zap.Error(err),
+		)
+
+		return nil, "", "", "", "", apperror.NewAppError(
+			http.StatusInternalServerError,
+			authdomain.ErrGenerateTokenFailed,
+		)
+	}
+
+	session := authdomain.NewSessionInput(
+		user.ID,
+		refreshTokenID,
+		refreshToken,
+		userAgent,
+		*refreshTokenExpiresAt,
+	)
+	if _, err = u.authRepo.Create(ctx, u.db, session); err != nil {
+		return nil, "", "", "", "", err
+	}
+
+	return user, refreshToken, accessToken, csrfToken, xsrfToken.String(), nil
 }
